--- a/css/style.css
+++ b/css/style.css
@@ -219,10 +219,11 @@ p{
 }
 
 .novedades-item .item:nth-child(2n){
-	margin: 0 1em;
+	margin: 0 1.1em;
 }
 
-.novedades-item .item h2{
+.novedades-item .item h2,
+.novedades-item .item .item-body h3{
 	margin-bottom: 0.4em;
 	font-size: 1.2em;
 	font-family: 'MyriadPro-Semibold',sans-serif;
@@ -236,4 +237,22 @@ p{
 	position: relative;
 	top: 0.3em;
 	width: 1.5em;
+}
+
+.novedades-item .item p{
+	text-align: justify;
+}
+
+.novedades-item .item figure{
+	margin: 1.5em auto 0 auto;
+	width: 8em;
+}
+
+.novedades-item .item figure img{
+	width: 100%;
+	border-radius: 50%;
+}
+
+.novedades-item .item .item-body{
+	text-align: center;
 }
