--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 -------------------------------------------------------------------------
 -------------------------------------------------------------------------*/
 @import url("style-icons.css");
+@import url("mediaqueries.css");
 
 @font-face{
 	font-family: 'Roboto-Medium';
@@ -48,6 +49,7 @@ header{
 	position: relative;
 	margin-bottom: 3em;
 	height: 32em;
+	overflow: hidden;
 }
 
 .header-container{
